[FIX][UI] Reduce width of choose-language select. Thanks, Marc. Also improve... --- * [FIX][UI] Reduce width of choose-language select. Thanks, Marc. Also improve... --- * [FIX][UI] Reduce width of choose-language select. Thanks, Marc. Also improve highlight color contrast in the dropdown.
See merge request tikiwiki/tiki!5663


(cherry picked from commit a41f72042cb73d00786881baee40d7e9209bd829)

bd253c01 [FIX][UI] Reduce width of choose-language select. Thanks, Marc. Also improve...


See merge request tikiwiki/tiki!5664

--- a/themes/base_files/scss/_select2-tiki_colors.scss
+++ b/themes/base_files/scss/_select2-tiki_colors.scss
@@ -73,8 +73,8 @@
 
 .tiki .select2-container--bootstrap-5 .select2-dropdown .select2-results__options .select2-results__option.select2-results__option--selected,
 .tiki .select2-container--bootstrap-5 .select2-dropdown .select2-results__options .select2-results__option[aria-selected="true"] {
-    color: $component-active-color;
-    background-color: $component-active-bg;
+//    color: $component-active-color; -- Use body color
+    background-color: var(--bs-tertiary-bg); // $component-active-bg;
 }
 
 // Apply theme colors via CSS variables
